<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY appname "Cyberpop">]>

<resources>
  <string name="app_id" translatable="false">120569614320</string>
  <string name="facebook_app_id" translatable="false">430199825050664</string>
  <string name="app_name" translatable="false">Cyberpop</string>

  <!-- test -->
  <string name="test_banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
  <string name="test_rewarded_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/5224354917</string>

  <!-- prod -->
  <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9591979033613743/6594335535</string>
  <string name="rewarded_ad_unit_id" translatable="false">ca-app-pub-9591979033613743/4722591875</string>

  <!-- non translatable -->
  <string name="vertical_divider" translatable="false">|</string>
  <string name="share_facebook" translatable="false">[ f ]</string>
  <string name="game_share_hashtag" translatable="false">#Cyberpop-StupidFunGames</string>
  <string name="game_share_link" translatable="false">https://play.google.com/store/apps/details?id=com.stupidfungames.pop</string>

  <string name="new_game_text">New Game</string>
  <string name="continue_game_text">Continue Game</string>
  <string name="share">Share</string>
  <string name="review">Review</string>
  <string name="game_share_string_title">Share Cyberpop with</string>
  <string name="game_share_string">Try playing Cyberpop - Bubble Popping Game!</string>
  <string name="continue_game_text_with_ad">Watch Ad to Continue Game</string>
  <string name="continue_game_text_with_token_purchase">Buy token to Continue Game</string>
  <string name="load_game_text">Resume Game</string>
  <string name="game_over_text">Game Over</string>
  <string name="options_text">Options</string>
  <string name="error_checking_continue_token">There was an error checking if you have a continue token. You can watch an ad instead.</string>
  <string name="store">Store</string>
  <string name="quit_text">Quit</string>
  <string name="your_score_title">Your score:</string>
  <string name="game_paused_text">Paused</string>
  <string name="game_update_text">The save you are trying to load was saved on a newer version of the game. Please update your game.</string>
  <string name="resume_btn_text">Resume</string>
  <string name="quit_btn_text">Quit</string>
  <string name="dismiss">Dismiss</string>
  <string name="dont_show_again">Don\'t show again.</string>
  <string name="update_btn_text">Update</string>
  <string name="signin_other_error">There was an error signing in. Try again another time.</string>
  <string name="signin_canceled">Sign in was canceled.</string>
  <string name="sign_out">Sign Out</string>
  <string name="no_save_game_available">There is no save game available. Start a new game</string>
  <string name="save_game_flow_title">Would you like to sign in to save your progress? Doing so will override your current game save!</string>
  <string name="sign_in">Sign In</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="no_permanent">No, don\'t show this again.</string>
  <string name="ok">Ok</string>
  <string name="generic_error">Something went wrong. Please try again later</string>
  <string name="login_to_save">You must login to save your game</string>
  <string name="must_be_logged_in">You must be logged in to access this feature.</string>
  <string name="game_saved">Game saved.</string>
  <string name="new_game_confirm_title">If you already have a save game this will overwrite it. Are you sure you want to proceed?</string>
  <string name="error_fetching_items">You must login to load the items.</string>
  <string name="no_items_result">No items are available at this time.</string>
  <string name="no_purchases_result">No products have been purchased.</string>
  <string name="purchase_succesful">Your purchase was successful!</string>
  <string name="purchase_canceled">Your purchase was cancelled</string>
  <string name="store_title">Store</string>
  <string name="my_items">My Items</string>
  <string name="buy">Buy</string>
  <string name="owned">Owned</string>
  <string name="equip">Equip</string>
  <string name="un_equip">Un-Equip</string>
  <string name="error_equipping">There was an error equipping your background. Update your app and try again.</string>
  <string name="equip_success">Background Equipped!</string>
  <string name="un_equip_success">Background Un-Equipped!</string>
  <string name="continue_game_choice_dialog_title">Choose an option to continue your game.</string>
  <string name="watch_ad_btn">Watch an ad.</string>
  <string name="buy_game_continue_token">Buy a game continue token [$0.99]</string>
  <string name="share_the_game_fb">Share pop to Facebook</string>
  <string name="share_the_game_other">Share pop with your friends</string>
  <string name="continue_game_token_not_aquired">You must acquire a continue game token to continue your game.</string>
  <string name="must_choose_option_to_continue">You must choose one of the options to continue your game.</string>
  <string name="prompt_user_to_continue">You can continue to resume your game!</string>
  <string name="global_bubbles_popped_string">Global bubbles popped:</string>

  <!-- App info -->
  <string name="app_info_title">About Cyberpop</string>
  <string name="app_info_subtitle">A fun arcade style bubble popping game Music credit: Karl Casey at White Bat Audio</string>

  <!-- Reviews -->
  <string name="review_app_dialog_title">Do you like Cyberpop so far?</string>
  <string name="review_app_btn_text">Yes! I\'d like to leave a review.</string>
  <string name="send_feedback_btn_text">No. I\'d like to send feedback.</string>
  <string name="feedback_title">Send Feedback.</string>
  <string name="feedback_send_btn">Send</string>

  <!-- Notifications -->
  <string name="notification_channel_name">Pop game notifications</string>
  <string name="notification_channel_description">Channel for pop notifications</string>
  <string name="nudge_notification_title">Come back to Cyberpop!</string>
  <string name="nudge_notification_content_1">Wake up samurai. We have bubbles to pop.</string>
  <string name="nudge_notification_content_2">Why aren\'t you popping bubbles right now?.</string>
  <string name="nudge_notification_content_3">Drop everything. There are bubbles that need popping.</string>
  <string name="nudge_notification_content_4">Come with me if you want to pop bubbles.</string>
  <string name="nudge_notification_content_5">We see you\'re not popping bubbles right now. Unacceptable.</string>
  <string name="nudge_notification_content_global_bubbles">Only %1$d bubbles have been popped globally! Help the effort!</string>

  <!-- Ads -->
  <string name="ad_load_error">There was a problem loading the ad. Have a free game continue token!</string>
  <string name="ad_reward_message">Thanks for watching have a game continue token!</string>
  <string name="ad_reward_failed_message">You must finish watching the ad to get a game continue token.</string>

  <!-- product titles -->
  <string name="title_game_continue_token">Continue Game Token</string>
  <string name="title_no_ads">Add Free Experience</string>

  <!-- product descriptions -->
  <string name="description_game_continue_token">Allows you to continue your game even after its game over. Can be used once.</string>
  <string name="description_no_ads">Removes all ads from your gaming experience!</string>

  <!-- background product titles -->
  <string name="title_bg_1">Neon Bus</string>
  <string name="title_bg_2">Akihabara</string>
  <string name="title_bg_3">Tokyo Streets</string>
  <string name="title_bg_4">Victoria Peak</string>
  <string name="title_bg_5">Tokyo Sky</string>
  <string name="title_bg_6">Tokyo Sky Lights</string>
  <string name="title_bg_7">Glass Building</string>
  <string name="title_bg_8">Gradient</string>
  <string name="title_bg_9">Smoky Temple</string>
  <string name="title_bg_10">Packed Streets</string>
  <string name="title_bg_11">Monster Buildings</string>
  <string name="title_bg_12">Foggy City</string>
  <string name="title_bg_13">Red Lamp</string>

  <!-- background product descriptions -->
  <string name="description_bg_1">Cool background of a bus in Hong Kong</string>
  <string name="description_bg_2">Background of Akihabara, Tokyo</string>
  <string name="description_bg_3">Background of the neon streets of Tokyo</string>
  <string name="description_bg_4">Background of a view from Victoria Peak Hong Kong</string>
  <string name="description_bg_5">Background of a view of Tokyo</string>
  <string name="description_bg_6">Background of a view of the Tokyo skyline</string>
  <string name="description_bg_7">Background of a glass building in Hong Kong</string>
  <string name="description_bg_8">Background of a gradient from red to black</string>
  <string name="description_bg_9">Background of a smoky temple </string>
  <string name="description_bg_10">Background of the packed streets of Tokyo</string>
  <string name="description_bg_11">Background of the monster buildings of Hong Kong</string>
  <string name="description_bg_12">Background of the foggy skyline of Tokyo</string>
  <string name="description_bg_13">Background of a huge red lamp</string>

  <!-- Tooltip texts -->
  <string name="turret_tooltip">Drag and drop turrets from this icon onto the screen. You can long press the turrets to drag them around.</string>
  <string name="ball_and_chain_tooltip">Press and hold this icon to get a mace.</string>
  <string name="sword_tooltip">Drag your finger on the screen to slice bubbles.</string>
  <string name="wall_tooltip">Drag and drop walls from this icon onto the screen. You can long press the walls to drag them around. Upgrading your walls to level 2 and up will make them pop bubbles!</string>
  <string name="nuke_tooltip">Tap this icon to pop all bubbles on the screen in waves. Careful, it takes a long time to recharge.</string>
  <string name="multi_touch_icon_tooltip">Tap a bubble to pop all nearby bubbles of the same colour.</string>
  <string name="touch_pop_tooltip">Touch the bubbles to pop them before they reach the bottom of the screen! Touch multiple bubbles of the same color to start a streak and earn more points!</string>
  <string name="upgrade_tooltip">Tap on these bubbles to acquire an upgrade. You can then tap on a tool on the right to upgrade it.</string>
  <string name="bomb_bubble_tooltip">This is a bomb bubble. Tap on it while it is green to diffuse it. Careful! If it\'s countdown reaches 0 or you tap on it while it is red it will explode and end the game!</string>
  <string name="negative_score_warning_tooltip">Careful! If your score falls below 0 it will be game over.</string>
  <string name="score">Score: </string>
</resources>