<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingTop="200dp"
        android:paddingHorizontal="@dimen/main_menu_padding_horizontal">

        <ImageView
            android:id="@+id/game_over"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            android:src="@drawable/game_over"
            android:layout_marginBottom="40dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"
            android:text="@string/your_score_title"
            android:gravity="center"/>

        <TextView
            android:id="@+id/score_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="40dp"/>

        <Button
            android:id="@+id/new_game_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/between_btn_padding"
            android:text="@string/new_game_text"/>

        <Button
            android:id="@+id/quit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quit_text"/>
    </LinearLayout>
</ScrollView>