<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@android:color/transparent">

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:layout_gravity="center"
      android:orientation="vertical"
      android:background="@drawable/rounded_border"
      >

    <com.stupidfungames.pop.androidui.GameMenuText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_update_text"
        android:textSize="18sp"
        android:paddingVertical="@dimen/menu_btn_padding_vertical"
        android:paddingHorizontal="@dimen/menu_btn_padding_vertical"
        android:layout_marginBottom="@dimen/between_btn_padding"
        android:gravity="center"
        android:clipToPadding="false"
        app:glow_color="@color/menu_button_color" />

    <com.stupidfungames.pop.androidui.GameMenuButton
        android:id="@+id/update_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_btn_text"
        android:gravity="center"
        android:textSize="26sp"
        android:paddingVertical="@dimen/menu_btn_padding_vertical"
        android:paddingHorizontal="@dimen/menu_btn_padding_vertical"
        app:glow_color="@color/menu_button_color"
        app:pressed_glow_color = "@color/menu_button_pressed_color" />

    <com.stupidfungames.pop.androidui.GameMenuButton
        android:id="@+id/dismiss_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dismiss"
        android:gravity="center"
        android:textSize="26sp"
        android:paddingVertical="@dimen/menu_btn_padding_vertical"
        android:paddingHorizontal="@dimen/menu_btn_padding_vertical"
        app:glow_color="@color/menu_button_color"
        app:pressed_glow_color = "@color/menu_button_pressed_color" />
  </LinearLayout>
</FrameLayout>